--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.3.0
+autopep8==1.5.4
 Django==3.1.3
+psycopg2-binary==2.8.6
+pycodestyle==2.6.0
 pytz==2020.4
 sqlparse==0.4.1
+toml==0.10.2
